# pycomsa

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: package.yml  test.yml
docs/: conf.py  index.rst
docs/api/: readers.rst
docs/guide/: formats.rst  install.rst
include/comsa/: msa.pxd
src/: CMakeLists.txt
src/comsa/: CMakeLists.txt
src/pycomsa/: __init__.py  _comsa.pyi  _comsa.pyx
src/pycomsa/tests/data/: example.004.AA.msac  trimal.msac  trimal.sto
